remove flex-column from  navbar

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     class="collapse navbar-collapse justify-content-end align-center"
                     id="main-nav"
                 >
-                    <ul class="navbar-nav ul-list" :class="{'flex-row-reverse':selectedLanguage === 'ar' }">
+                    <ul class="navbar-nav ul-list">
                         <li class="nav-item px-3 position-relative fit-width">
                             <a href="#home" class="nav-link custom-hover-effect text-white text-uppercase">{{ $t('navbar.link_1') }}</a>
                         </li>
