nav button => bgwhite

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <span class="fw-bold text-white">R</span>afii<i class="fa-solid fa-leaf text-white fs-4"></i>
                 </a>
                 <button
-                    class="navbar-toggler "
+                    class="navbar-toggler bg-white"
                     type="button"
                     data-bs-toggle="collapse"
                     data-bs-target="#main-nav"
