--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
                 <a href="index.html" class="navbar-brand fs-1 brand-font rounded-circle">
                     <span class="fw-bold text-white">R</span>afii<i class="fa-solid fa-leaf text-white fs-4"></i>
                 </a>
+                <li class="nav-item px-3 position-relative fit-width d-flex align-items-center justify-content-center  d-md-none">
+                    <div class="d-flex align-items-center justify-content-center">
+                        <i class="fa-solid fa-globe text-white"></i>
+                        <select v-model="selectedLanguage" @change="changeLanguage" class="form-select form-select-sm mainBg text-white border-0" aria-label="Small select example">
+                            <option value="fr">FR</option>
+                            <option value="ar">AR</option>
+                        </select>
+                    </div>
+                </li>
                 <button
                     class="navbar-toggler bg-white"
                     type="button"
@@ -64,7 +73,7 @@
                         <li class="nav-item px-3 position-relative fit-width">
                             <a href="contact.html" class="nav-link custom-hover-effect text-white text-uppercase">{{ $t('navbar.link_4') }}</a>
                         </li>
-                        <li class="nav-item px-3 position-relative fit-width d-flex align-items-center justify-content-center">
+                        <li class="nav-item px-3 position-relative fit-width d-flex align-items-center justify-content-center d-none d-md-flex">
                             <div class="d-flex align-items-center justify-content-center">
                                 <i class="fa-solid fa-globe text-white"></i>
                                 <select v-model="selectedLanguage" @change="changeLanguage" class="form-select form-select-sm mainBg text-white border-0" aria-label="Small select example">
