--- a/contact.html
+++ b/contact.html
@@ -33,11 +33,11 @@
                     <a href="index.html" class="navbar-brand brand-font fs-1 rounded-circle">
                         <span class="fw-bold text-white">R</span>AFII<i class="fa-solid fa-leaf text-white fs-4"></i>
                     </a>
-                    <ul class="navbar-nav ul-list" :class="{'flex-row-reverse':selectedLanguage === 'ar' }">
-                        <li class="nav-item px-3 position-relative fit-width d-flex align-items-center">
+                    <div :class="{'flex-row-reverse':selectedLanguage === 'ar' }">
+                        <div class=" px-3 position-relative fit-width d-flex align-items-center">
                             <i class="fa-solid fa-arrow-left-long text-white back-icon"></i> <a  :class="{'arabic-font': selectedLanguage === 'ar'}"  href="index.html" class="nav-link custom-hover-effect text-white text-uppercase">{{ $t('contact-section.back-button') }}</a>
-                        </li>
-                    </ul>
+                        </div>
+                    </div>
                 </div>
             </nav>
             <!-- End Navbar  -->
@@ -101,10 +101,10 @@
                     <div :class="{'arabic-font': selectedLanguage === 'ar'}"  class="col-md-8 col-lg-3 my-3 mx-lg-5 text-center">
                         <span  :class="{'arabic-font': selectedLanguage === 'ar'}"  class="fw-bold fs-4 headingFont">{{ $t('contact-data.quickLinks') }}</span>
                         <ul class="mt-3 menuList m-0 p-0">
-                        <li class="mb-2"><a class="text-muted text-decoration-none" href="#home">{{ $t('navbar.link_1') }}</a></li>
+                        <li class="mb-2"><a class="text-muted text-decoration-none" href="index.html">{{ $t('navbar.link_1') }}</a></li>
                         <li class="mb-2"><a class="text-muted text-decoration-none" href="contact.html">{{ $t('navbar.link_2') }}</a></li>
-                        <li class="mb-2"><a class="text-muted text-decoration-none" href="#a-propos">{{ $t('navbar.link_3') }}</a></li>
-                        <li><a class="text-muted  text-decoration-none" href="#services">{{ $t('navbar.link_4') }}</a></li>
+                        <li class="mb-2"><a class="text-muted text-decoration-none" href="index.html#a-propos">{{ $t('navbar.link_3') }}</a></li>
+                        <li><a class="text-muted  text-decoration-none" href="index.html#services">{{ $t('navbar.link_4') }}</a></li>
                         </ul>
                     </div>
                     <div  :class="{'arabic-font': selectedLanguage === 'ar'}"  class="col-md-8 col-lg-3 my-3 text-center">
