--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                     </a>
                     <ul class="navbar-nav ul-list" :class="{'flex-row-reverse':selectedLanguage === 'ar' }">
                         <li class="nav-item px-3 position-relative fit-width d-flex align-items-center">
-                            <i class="fa-solid fa-arrow-left-long text-white back-icon"></i> <a  :class="{'arabic-font': selectedLanguage == 'ar'}"  href="index.html" class="nav-link custom-hover-effect text-white text-uppercase">{{ $t('contact-section.backButton') }}</a>
+                            <i class="fa-solid fa-arrow-left-long text-white back-icon"></i> <a href="index.html" class="nav-link custom-hover-effect text-white text-uppercase">{{ $t('contact-section.backButton') }}</a>
                         </li>
                     </ul>
                 </div>
