--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </nav>
             <!-- End Navbar  -->
             <!-- Start Home page -->
-            <section id="home" class="section mainBg overflow-hidden">
+            <section id="home" class="section mainBg overflow-hidden mt-2">
                 <div class="container pb-5">
                     <div class="row justify-content-center align-items-center pb-4 pt-lg-4">
                         <div class="col-md-8 col-lg-5 text-center text-lg-start mb-sm-5 py-5">
