--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                         <span class="thirdColor text-uppercase">{{ $t('about-us.experience.span_2') }}</span>
                                     </div>
                                 </div>
-                                <p class="fontColor text-center text-lg-start ar-rlt">{{ $t('about-us.about-content') }}</p>
+                                <p class="fontColor ar-rlt">{{ $t('about-us.about-content') }}</p>
                             </div>
                         </div>
                     </div>
